// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Heading default 1`] = `
<div
  class="spacing"
>
  <h1
    class="sub-heading head"
  >
    Welcome to Secure File Upload & Storage
  </h1>
  <p
    class="text head"
  >
    The Secure File Upload & Storage allows you to securely upload and store files on an S3 compatible storage bucket.
  </p>
</div>
`;

exports[`Storyshots Home default 1`] = `
Array [
  <div
    className="blue"
  >
    <div
      className="spacing"
    >
      <nav
        className="navbar navbar-expand-md sticky-top"
      >
        <div
          class="container-fluid"
        >
          <a
            class="navbar-brand"
            href="https://ca.nttdata.com/en/"
          >
            <img
              height="40px"
              src="undefined/images/s3.svg"
              width="55px"
            />
          </a>
        </div>
        <a
          className="links"
          href="https://ca.nttdata.com/en/"
        >
          About Us
        </a>
        <a
          className="pl-4 links"
          href="https://github.com/SierraSystems/secure-file-storage"
        >
          GitHub
        </a>
      </nav>
      <p
        class="main-heading"
      >
        Secure File Upload & Storage
      </p>
    </div>
  </div>,
  <div
    class="spacing"
  >
    <h1
      class="sub-heading head"
    >
      Welcome to Secure File Upload & Storage
    </h1>
    <p
      class="text head"
    >
      The Secure File Upload & Storage allows you to securely upload and store files on an S3 compatible storage bucket.
    </p>
  </div>,
  <br />,
  <div
    className="spacing"
    style={
      Object {
        "margin": "auto",
        "width": "60%",
      }
    }
  >
    <div
      className="filepond--wrapper"
    >
      <input
        multiple={true}
        type="file"
      />
    </div>
  </div>,
]
`;

exports[`Storyshots NavBar default 1`] = `
<div
  className="blue"
>
  <div
    className="spacing"
  >
    <nav
      className="navbar navbar-expand-md sticky-top"
    >
      <div
        class="container-fluid"
      >
        <a
          class="navbar-brand"
          href="https://ca.nttdata.com/en/"
        >
          <img
            height="40px"
            src="undefined/images/s3.svg"
            width="55px"
          />
        </a>
      </div>
      <a
        className="links"
        href="https://ca.nttdata.com/en/"
      >
        About Us
      </a>
      <a
        className="pl-4 links"
        href="https://github.com/SierraSystems/secure-file-storage"
      >
        GitHub
      </a>
    </nav>
    <p
      class="main-heading"
    >
      Secure File Upload & Storage
    </p>
  </div>
</div>
`;

exports[`Storyshots Uploader default 1`] = `
<div
  className="spacing"
  style={
    Object {
      "margin": "auto",
      "width": "60%",
    }
  }
>
  <div
    className="filepond--wrapper"
  >
    <input
      multiple={true}
      type="file"
    />
  </div>
</div>
`;
